Fixed the row alignment issue in the Mobile Administrator Control Panel.

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -106,6 +106,10 @@ html, body {
 		width: 100%;
 		height: 160px;
 	}	
+	
+	.acprow {
+		margin-bottom: 8px;
+	}
 }
 
 .page-header {
